--- a/Themes/Everforest Hard.css
+++ b/Themes/Everforest Hard.css
@@ -5,8 +5,8 @@ meta {
 }
 
 /*
- * Everforest Medium Variant Color Palette
- * Background: #2D353B (dim), #343F44 (0), #3D484D (1), #445055 (2), #4C565C (3), #555F66 (4), #5C6A72 (5)
+ * Everforest Hard Variant Color Palette
+ * Background: #1E2326 (dim), #272E33 (0), #2E383C (1), #374145 (2), #414B50 (3), #495156 (4), #4F5B58 (5)
  * Foreground: #D3C6AA
  * Red: #E67E80, Orange: #E69875, Yellow: #DBBC7F, Green: #A7C080
  * Blue: #7FBBB3, Aqua: #83C092, Purple: #D699B6
@@ -16,25 +16,25 @@ meta {
  * Window styles
  */
 meta.window {
-  border-color: #4C565C;
-  background-color: #2D353B;
+  border-color: #414B50;
+  background-color: #1E2326;
 }
 meta.titlebar {
   color: #D3C6AA;
-  border-color: #4C565C;
-  background-color: #2D353B;
+  border-color: #414B50;
+  background-color: #1E2326;
 }
 meta.titlebar.inactive {
-  color: #859289;
+  color: #7A8478;
 }
 
 meta.button {
-  background: linear-gradient(#445055, #3D484D);
-  border: linear-gradient(#343F44, #2D353B);
+  background: linear-gradient(#374145, #2E383C);
+  border: linear-gradient(#272E33, #1E2326);
   color: #D3C6AA;
 }
 meta.button.highlighted {
-  background: linear-gradient(#4C565C, #445055);
+  background: linear-gradient(#414B50, #374145);
   color: #D3C6AA;
 }
 meta.button.selected {
@@ -42,22 +42,22 @@ meta.button.selected {
   background: #83C092;
 }
 meta.button.highlighted.selected {
-  color: #2D353B;
+  color: #1E2326;
   background: #A7C080;
 }
 meta.button.disabled {
   color: #7A8478;
-  background: #3D484D;
+  background: #2E383C;
 }
 
 meta.textfield {
-  background-color: #343F44;
-  border-color: #445055;
+  background-color: #272E33;
+  border-color: #374145;
   color: #D3C6AA;
 }
 meta.textfield.highlighted {
-  background-color: #2D353B;
-  border-color: #4C565C;
+  background-color: #1E2326;
+  border-color: #414B50;
 }
 
 meta.accent {
@@ -68,31 +68,31 @@ meta.accent {
  * Document styles
  */
 meta.document {
-  background-color: #2D353B;
-  border-color: #4C565C;
+  background-color: #1E2326;
+  border-color: #414B50;
 }
 
 meta.document.button {
-  background: linear-gradient(#3D484D, #343F44);
-  border: linear-gradient(#2D353B, #2D353B);
+  background: linear-gradient(#2E383C, #272E33);
+  border: linear-gradient(#1E2326, #1E2326);
   color: #D3C6AA;
 }
 meta.document.button.disabled {
-  background: linear-gradient(#3D484D80, #343F4480);
+  background: linear-gradient(#2E383C80, #272E3380);
   color: #7A8478;
 }
 meta.document.button.highlighted {
-  background: linear-gradient(#445055, #3D484D);
+  background: linear-gradient(#374145, #2E383C);
   color: #D3C6AA;
 }
 
 meta.document.textfield {
-  background-color: #2D353B;
-  border-color: #445055;
+  background-color: #1E2326;
+  border-color: #374145;
   color: #D3C6AA;
 }
 meta.document.textfield.highlighted {
-  background-color: #2D353B;
+  background-color: #1E2326;
   border-color: #83C092;
 }
 
@@ -104,27 +104,27 @@ meta.text.invisible {
   color: #D3C6AA26;
 }
 meta.text.selected {
-  background-color: #404952;
+  background-color: #32383C;
   color: #D3C6AA;
 }
 
 /* Cursor */
 meta.cursor {
-  background-color: #3D484D;
+  background-color: #2E383C;
 }
 
 /* Indentation Guides */
 meta.indentguide {
-  border-color: #4C565C33;
+  border-color: #414B5033;
 }
 
 /* Gutter */
 meta.gutter {
   color: #7A8478;
-  background-color: #343F44;
+  background-color: #272E33;
 }
 meta.gutter.selected {
-  background-color: #404952;
+  background-color: #32383C;
   color: #D3C6AA;
 }
 
@@ -284,7 +284,7 @@ markup.list.item {
   color: #E69875;
 }
 markup.code {
-  background-color: #343F44;
+  background-color: #272E33;
   color: #83C092;
 }
 markup.link {
@@ -388,7 +388,7 @@ style.value.identifier.function {
  * Terminal Colors (ANSI)
  */
 terminal.black {
-  color: #2D353B;
+  color: #1E2326;
 }
 terminal.red {
   color: #E67E80;
@@ -437,4 +437,3 @@ terminal.brightCyan {
 terminal.brightWhite {
   color: #D3C6AA;
 }
-
