--- a/Themes/Everforest Medium Dark.css
+++ b/Themes/Everforest Medium Dark.css
@@ -16,25 +16,25 @@ meta {
  * Window styles
  */
 meta.window {
-  border-color: #4C565C;
-  background-color: #2D353B;
+  border-color: #4F585E;
+  background-color: #232A2E;
 }
 meta.titlebar {
   color: #D3C6AA;
-  border-color: #4C565C;
-  background-color: #2D353B;
+  border-color: #4F585E;
+  background-color: #232A2E;
 }
 meta.titlebar.inactive {
   color: #859289;
 }
 
 meta.button {
-  background: linear-gradient(#445055, #3D484D);
-  border: linear-gradient(#343F44, #2D353B);
+  background: linear-gradient(#475258, #3D484D);
+  border: linear-gradient(#343F44, #232A2E);
   color: #D3C6AA;
 }
 meta.button.highlighted {
-  background: linear-gradient(#4C565C, #445055);
+  background: linear-gradient(#4F585E, #475258);
   color: #D3C6AA;
 }
 meta.button.selected {
@@ -42,7 +42,7 @@ meta.button.selected {
   background: #83C092;
 }
 meta.button.highlighted.selected {
-  color: #2D353B;
+  color: #232A2E;
   background: #A7C080;
 }
 meta.button.disabled {
@@ -51,13 +51,13 @@ meta.button.disabled {
 }
 
 meta.textfield {
-  background-color: #343F44;
-  border-color: #445055;
+  background-color: #2D353B;
+  border-color: #475258;
   color: #D3C6AA;
 }
 meta.textfield.highlighted {
-  background-color: #2D353B;
-  border-color: #4C565C;
+  background-color: #232A2E;
+  border-color: #4F585E;
 }
 
 meta.accent {
@@ -68,31 +68,31 @@ meta.accent {
  * Document styles
  */
 meta.document {
-  background-color: #2D353B;
-  border-color: #4C565C;
+  background-color: #232A2E;
+  border-color: #4F585E;
 }
 
 meta.document.button {
-  background: linear-gradient(#3D484D, #343F44);
-  border: linear-gradient(#2D353B, #2D353B);
+  background: linear-gradient(#3D484D, #2D353B);
+  border: linear-gradient(#232A2E, #232A2E);
   color: #D3C6AA;
 }
 meta.document.button.disabled {
-  background: linear-gradient(#3D484D80, #343F4480);
+  background: linear-gradient(#3D484D80, #2D353B80);
   color: #7A8478;
 }
 meta.document.button.highlighted {
-  background: linear-gradient(#445055, #3D484D);
+  background: linear-gradient(#475258, #3D484D);
   color: #D3C6AA;
 }
 
 meta.document.textfield {
-  background-color: #2D353B;
-  border-color: #445055;
+  background-color: #232A2E;
+  border-color: #475258;
   color: #D3C6AA;
 }
 meta.document.textfield.highlighted {
-  background-color: #2D353B;
+  background-color: #232A2E;
   border-color: #83C092;
 }
 
@@ -104,7 +104,7 @@ meta.text.invisible {
   color: #D3C6AA26;
 }
 meta.text.selected {
-  background-color: #404952;
+  background-color: #3E484D;
   color: #D3C6AA;
 }
 
@@ -115,16 +115,16 @@ meta.cursor {
 
 /* Indentation Guides */
 meta.indentguide {
-  border-color: #4C565C33;
+  border-color: #4F585E33;
 }
 
 /* Gutter */
 meta.gutter {
   color: #7A8478;
-  background-color: #343F44;
+  background-color: #2D353B;
 }
 meta.gutter.selected {
-  background-color: #404952;
+  background-color: #3E484D;
   color: #D3C6AA;
 }
 
@@ -325,7 +325,7 @@ markup.list.item {
   color: #E69875;
 }
 markup.code {
-  background-color: #343F44;
+  background-color: #2D353B;
   color: #83C092;
 }
 markup.link {
@@ -429,7 +429,7 @@ style.value.identifier.function {
  * Terminal Colors (ANSI)
  */
 terminal.black {
-  color: #2D353B;
+  color: #232A2E;
 }
 terminal.red {
   color: #E67E80;
